--- a/template/fitness.html
+++ b/template/fitness.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Fitness Club</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
       <a href="nutrition.html">Nutrition</a> &nbsp; &nbsp;
       <a href="contact.html">Contact Us</a>
     </nav>
-    
+
     <!--  the main content of the web page-->
     <main>
 
