--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,28 @@
+/* styles for the Mobile-First Strategy */
+
 /* styles for body element */
 body {
   background-color: #ffff99;
 }
 
+/* styles for fluid image */
+img {
+  max-width: 100%;
+}
+
 /* styles for teh container id */
 #container {
-  width: 80%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
 
 /* styles for the header section */
 header {
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 0.2em;
   background-color: #ffffff;
-  border-radius: 10px;
-  box-shadow: 12px 12px 12px #404040;
+  border-radius: 0.5em;
+  text-align: center;
 }
 
 /* styles for the nav element */
@@ -25,36 +31,66 @@ nav {
   font-size: 1.25em;
   font-weight: bold;
   text-align: center;
-  padding: 15px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  border-radius: 20px;
-  border-top: 5px solid #ffffff;
-  border-bottom: 5px solid #ffffff;
+}
+
+/* add styles for the unordered list in teh nav */
+nav ul {
+  padding: 0;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+/* add style for the list items in the nav */
+nav li {
+  background-color: #009933;
+  border-radius: 2em;
+  list-style-type: none;
+  margin: 0.3em;
+  padding: 0.4em;
+}
+
+/* add styles fro teh anchor tag inside the li */
+nav li a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+/* add styles for teh mobile class */
+.mobile {
+  display: inline;
+}
+
+/* add style fro the desktop class */
+.desktop {
+  display: none;
 }
 
 /* styles for the main div */
 main {
   font-family: Verdana, Arial, sans-serif;
   font-size: 1em;
-  margin-top: 20px;
-  margin-bottom: 10px;
-  padding: 20px;
-  border-radius: 10px;
+  margin-top: 0.5em;
+  padding: 1em;
+  border-radius: 1em;
   background-color: #ffffff;
-  box-shadow: 12px 12px 12px #404040;
+  border-top: solid 0.2em #009933;
+  border-bottom: solid 0.2em #009933;
 }
 /* footer styles */
 footer {
   font-size: 0.7em;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 2em;
+}
+
+/* styles for teh tablet class */
+.tablet {
+  display: none;
 }
 
 /* styles for teh equip class */
 .equip {
-  float: left;
-  margin-right: 20px;
+  display: none;
 }
 
 /* clear float for the heading cvoming after equip classs that is float left */
