--- a/template/fitness.html
+++ b/template/fitness.html
@@ -11,7 +11,7 @@
   <div id="container">
     <!-- a section for the headings of the webpage and logo -->
     <header>
-      <a href="index.html"><img src="images/ffc_logo.png" alt="Fitness Club Logo" height="275" width="845"></a>
+      <a href="index.html"><img src="images/ffc_logo.png" alt="Fitness Club Logo"></a>
     </header>
 
     <!-- navigation section of the webpage
