--- a/css/styles.css
+++ b/css/styles.css
@@ -93,22 +93,68 @@ footer {
   display: none;
 }
 
-/* clear float for the heading cvoming after equip classs that is float left */
-/* h1 {
-  clear: left;
-} */
+/* Media Query for teh tablet view port targets screen only */
+/* minimum width is 481px */
+@media only screen and (min-width: 481px) {
+  /* styles specifies teh horizontal display for the nav li */
+  nav li {
+    display: inline;
+    float: left;
+    margin-left: 1%;
+    margin-right: 1%;
+    padding-left: 0;
+    padding-right: 0;
+    width: 18%;
+  }
 
-/* styles for teh unordered list */
-ul {
-  margin-bottom: 50px;
-  list-style-position: inside;
-}
+  /* styles for the main */
+  main {
+    clear: left;
+    margin-top: 4em;
+  }
 
-/* styles for teh description term */
-dt {
-  font-weight: bold;
-}
+  /* styles for the mobiole class */
+  .mobile {
+    display: none;
+  }
 
-dd {
-  margin-bottom: 20px;
+  /* sektop styles */
+  .desktop {
+    display: inline;
+  }
+
+  /* styles for the eqiup class */
+  .equip {
+    display: inline;
+    float: left;
+    margin-right: 1.5em;
+  }
+
+  /* styles for teh class items */
+  .items {
+    display: block;
+    list-style-position: inside;
+    margin-bottom: 5em;
+  }
+
+  /* styles for the tablet class */
+  .tablet {
+    display: block;
+  }
+
+  /* styles for the dt */
+  dt {
+    font-weight: bold;
+    margin-top: .7em;
+  }
+
+
+
+
+
+
+
+
+
+
 }
