add improvement for the nutrition page

--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,7 @@ footer a {
     clear: left;
     /* margin-top: 4em; */
     border-radius: 0;
+    overflow: auto;
   }
 
   /* styles for h1 */
@@ -205,6 +206,53 @@ footer a {
   dt {
     font-weight: bold;
     margin-top: .7em;
+  }
+
+  /* styles for teh contact class */
+  .contact {
+    background-color: transparent;
+    padding: 0;
+    color: #1d1d1c;
+    text-decoration: underline;
+  }
+
+  /* styles for the article element */
+  article {
+    background-color: #c1d9ca;
+    float: left;
+    margin: 0.5%;
+    padding: 0.5%;
+    text-align: center;
+    width: 31%;
+  }
+
+  /* styles for teh images inside the article */
+  article img {
+    border: solid 0.1em #1d1d1c;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  /* styles for the paragraphs inside the article */
+  article p {
+    color: #000000;
+    margin-top: 2%;
+    padding: 1%;
+    text-align: left;
+  }
+
+  /* styles for the ul inside the article */
+  article ul {
+    text-align: left;
+  }
+
+  /* styles for the aside element */
+  aside {
+    background-color: #ffffff;
+    border-radius: 0 5em 5em 5em;
+    box-shadow: 1em 1em 1em #4c4f4d;
+    padding: 1.5em;
+    margin: 1em;
   }
 }
 
@@ -332,6 +380,26 @@ footer a {
   section p {
     margin-left: 0;
   }
+
+  /* styles for the main heading h2 */
+  main h2 {
+    color: #ffffff;
+  }
+
+  /* styles for the contact */
+  .contact {
+    color: #ffffff;
+  }
+
+  /* styles for the h2 in article main */
+  main article h2 {
+    color: #000000;
+  }
+
+  article p {
+    color: #000000;
+  }
+
 
 
 
