add classes page

--- a/template/fitness.html
+++ b/template/fitness.html
@@ -17,11 +17,13 @@
     <!-- navigation section of the webpage
     use this area to add links to other pages-->
     <nav>
-      <a href="index.html">Home</a> &nbsp; &nbsp;
-      <a href="about.html">About Us</a> &nbsp; &nbsp;
-      <a href="class.html">Classes</a> &nbsp; &nbsp;
-      <a href="nutrition.html">Nutrition</a> &nbsp; &nbsp;
-      <a href="contact.html">Contact Us</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="class.html">Classes</a></li>
+        <li><a href="nutrition.html">Nutrition</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
     </nav>
 
     <!--  the main content of the web page-->
