--- a/css/styles.css
+++ b/css/styles.css
@@ -254,6 +254,34 @@ footer a {
     padding: 1.5em;
     margin: 1em;
   }
+
+  /* styles for the table */
+  table {
+    border: 0.1em solid #000000;
+    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+
+  /* styles for the th and td */
+  th, td {
+    border: 0.1em solid #000000;
+    padding: 1em;
+  }
+
+  /* styles for the th */
+  th {
+    background-color: #1d1d1c;
+    color: #ffffff;
+  }
+
+  /* styles for caption */
+  caption {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin-bottom: 0.5em;
+  }
 }
 
 /* Media query for desktop width size */
@@ -400,6 +428,16 @@ footer a {
     color: #000000;
   }
 
+  /* styles for the table */
+  table {
+    background-color: #ffffff;
+    width: 85%;
+  }
+
+  /* styles for the caption */
+  caption {
+    color: #ffffff;
+  }
 
 
 
