make the articles have same height

--- a/css/styles.css
+++ b/css/styles.css
@@ -282,6 +282,11 @@ footer a {
     font-weight: bold;
     margin-bottom: 0.5em;
   }
+
+  /* styles for the flex-container class */
+  .flex-container {
+    display: flex;
+  }
 }
 
 /* Media query for desktop width size */
